# dspy-wordpress

./: README.md  pyproject.toml
data/: two_documents.jsonl
dspy_wordpress/: __init__.py  run_dspy.py  run_dspy_rockset.py  run_wordpress_import.py  run_wordpress_import_rockset.py
dspy_wordpress/integrations/: __init__.py
dspy_wordpress/integrations/local/: local_rm.py
dspy_wordpress/integrations/rockset/: __init__.py  access_rockset.py  rockset_content_store.py  rockset_rm.py  wordpress_collection.py
dspy_wordpress/integrations/weaviate/: weaviate_v4_rm.py  wordpress_collection.py
dspy_wordpress/model/: blog_post.py
dspy_wordpress/util/: wordpress_jsonl_reader.py
